10/06/15
  -Fixed single bool array read derp, removed some old code
  
10/05/15
  -Fixed multi dim write
  -Added write single array bool support
  
10/04/15
  -Added multi dim read support

10/01/15
  -A bunch of rework for reading/writing bit of a word
  -Cleaned up extra read when writing to tag

09/28/15
  -Read single BOOL from array works now, reworked initial tag read
  -Fixed bit of a word reading, changed code for checking value of bit of a word
  
09/27/15
  -Each unique tag read gets stored in a dictionary so we won't read it again
      when we do a write
  -Back to returning just value instead of tag type
  -Cleaned up write function with new dict changes, fixed issue with bit of word confusion
  -Cleaned some more commented functions

09/22/15
  -Fixed large array read bug
  -Fixed LINT array reads
  -Added TagNameParser function

09/20/15
  -Large array reads now sort of working 
  
08/31/15
  -Write bit of a word fixed (something wrong with bit 31)

08/27/2015
  -Added ParsePacket to LGXTag which GetTagList uses
  -Read now returns LGXTag type
  -Write no longer requres providing data type
  -Fixed GetTagList when processor is not in slot 0

08/26/2015
  -Added LINT read support
  -Added functino .GetPLCTime()
  -Fixed write reporting error when successful
  -Removed some white space

06/20/2015
  -Removed duplicate _buildEIPSendRRDatHeader, renamed some stuff
  -Fixed TagName length, was grabbing extra data
  -Write now reports an error if it fails

06/17/15
  -Created LGXTag object, GetTagList() now returns list of LGXTag
  -Modified read for string to accomodate custom string size data types
  -Renamed ReadStuffs/WriteStuffs to Read/Write, "STRUCT" data type renamed to "STRING"

06/15/2015
  -GetTagList() is now working.  Still could use some work though.

06/14/2015
  -Rename some TagList functions, combined TagListMessage functions, still needs work
  
06/12/2015
  -Added GetTagList function, needs some serious work though
  
04/07/2015