@@ -1,5 +1,6 @@
 10/06/15
   -Fixed single bool array read derp, removed some old code
+  -Reworked CIPDataTypes dict
   
 10/05/15
   -Fixed multi dim write
